# EdgeFlow

./: .gitignore  LICENSE  README.md
MobileNetV2-ncnn-inference-engine/: CMakeLists.txt  README.md
MobileNetV2-ncnn-inference-engine/outputs/: mobilenetv2.pnnx.param  mobilenetv2_ncnn.py  mobilenetv2_pnnx.py
MobileNetV2-ncnn-inference-engine/src/: mobilenetv2_ncnn.cpp
MobileNetV2-ncnn-inference-engine/tests/: verify_mobilenetv2_ncnn.py  verify_mobilenetv2_ncnn_batch.py
MobileNetV2_Inference_Engine_iOS/MobileNetV2InferenceEngine/MobileNetV2InferenceEngine/: BenchmarkLogFormatter.swift  BenchmarkReportPayload.swift  BenchmarkSnapshotImporter.swift  ContentView.swift  InferenceConfiguration.swift  InferenceSnapshot.swift  InferenceViewModel.swift  MobileNetV2InferenceEngine-Bridging-Header.h  MobileNetV2InferenceEngineApp.swift  NativeInferenceBenchmarkRunner.swift  NativeInferenceBridge.h  NativeInferenceBridge.mm  ReportDocumentBuilder.swift  ResultLogStore.swift
MobileNetV2_Inference_Engine_iOS/MobileNetV2InferenceEngine/MobileNetV2InferenceEngine.xcodeproj/: project.pbxproj
MobileNetV2_Inference_Engine_iOS/MobileNetV2InferenceEngine/MobileNetV2InferenceEngine/AppResources/: mobilenetv2.param
MobileNetV2_Inference_Engine_iOS/MobileNetV2InferenceEngine/MobileNetV2InferenceEngineTests/: MobileNetV2InferenceEngineTests.swift
MobileNetV2_Inference_Engine_iOS/MobileNetV2InferenceEngine/MobileNetV2InferenceEngineUITests/: MobileNetV2InferenceEngineUITests.swift  MobileNetV2InferenceEngineUITestsLaunchTests.swift
MoblieNetV2-mnn-inference-engine/: CMakeLists.txt  README.md
MoblieNetV2-mnn-inference-engine/include/: benchmark.h  image_loader.h  infer_utils.h  mnn_classifier.h
MoblieNetV2-mnn-inference-engine/src/: image_loader.cpp  main.cpp  mnn_classifier.cpp
MoblieNetV2-mnn-inference-engine/tests/: benchmark_mobilenetv2_mnn.py  infer_utils_test.cpp
docs/: mobilenetv2-edge-deploy-optimization.md
mobilenetv2-demo/: README.md  release-assets.json  requirements.txt
mobilenetv2-demo/models/: eval_manifest.csv  eval_manifest.template.csv
mobilenetv2-demo/reports/: quantization_report.md
mobilenetv2-demo/scripts/: analyze_model.py  benchmark.py  download_release_assets.py  mobilenetv2_onnx_demo.py  mobilenetv2_quantization_demo.py
models/: eval_manifest.csv  mobilenetv2_int8_dynamic.onnx  mobilenetv2_int8_static.onnx  resnet18.onnx
(+4 files in other folders)
